# hello_gl

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/include/: Shader.h
application/src/: Shader.cpp  main.cpp
framework/: CMakeLists.txt
include/: Controller.h
res/: triangle.fs.glsl  triangle.vs.glsl
src/: CMakeLists.txt  Controller.cpp  main.cpp  tmain.cpp
src/framework/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  library.h
